--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "typescript": "^4.1.0",
     "postcss": "^8.4.18"
+  },
+  "resolutions": {
+    "@swc/core": "1.3.42"
   }
 }
